--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body{
   max-width: 600px;
   width: 100%;
   background-color: #fff;
+  background-image: linear-gradient(to right bottom, #fff,#f2f2f2);
 }
 .cards, .card, .view{
   display: flex;
@@ -77,7 +78,7 @@ body{
   border: 5px solid #000;
   pointer-events: none;
   backface-visibility: hidden;
-  box-shadow: -7px 7px rgba(0,0,0,0.2);
+  box-shadow: 7px 7px rgba(0,0,0,0.3);
   transition: transform 0.25s linear;
 }
 .card .back-view{
@@ -101,4 +102,19 @@ body{
 .card.flip .front-view{
   transform: rotateY(180deg);
 }
+@media screen and (max-width:680px) {
+  .cards{
+    gap: 0px;
+  }
+}
+@media screen and (max-width:500px){
+  .cards .card{
+     width:50px;
+     height: 50px;
+     margin: 5px;
+  }
+  .cards{
+    gap: 0px;
 
+  }
+}
