--- a/style.css
+++ b/style.css
@@ -109,8 +109,8 @@ body{
 }
 @media screen and (max-width:500px){
   .cards .card{
-     width:50px;
-     height: 50px;
+    width: 4em;
+    height: 4em;
      margin: 5px;
   }
   .cards{
