--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body{
   position: absolute;
   border-radius: 7px;
   background-color: #f4c531;
-  
+  border: 5px solid #000;
   pointer-events: none;
   backface-visibility: hidden;
   box-shadow: 4px 4px rgba(0,0,0,0.2);
