--- a/style.css
+++ b/style.css
@@ -4,11 +4,15 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+html,body{
+  height: 100%;
+  width: 100%;
+}
 body{
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  
   background-color: #f4c531;
 }
 .wrapper{
