--- a/style.css
+++ b/style.css
@@ -20,10 +20,11 @@ body{
   border-radius: 20px;
   box-shadow: 12px 12px rgba(0,0,0,0.2);
   border: 12px solid #161a22;
-  max-width: 600px;
-  width: 100%;
+  max-width: 550px;
+  width: auto;
   background-color: #fff;
   background-image: linear-gradient(to right bottom, #fff,#f2f2f2);
+  transition: .3s;
 }
 .cards, .card, .view{
   display: flex;
@@ -89,6 +90,8 @@ body{
 .card .back-view{
   background-color: #fff;
   transition: .5s;
+  width: 100%;
+  height: 100%;
 }
 .card .front-view img{
   width: 15px;
@@ -96,7 +99,7 @@ body{
 .card .back-view{
 }
 .card .back-view img{
-  max-width: 45px;
+  max-width: 75%;
 }
 .card .back-view{
   transform: rotateY(-180deg);
